# plaid2text

./: .gitignore  flake.nix  pyproject.toml
src/python/plaid2text/: config_manager.py  online_accounts.py  plaid2text.py  renderers.py  storage_manager.py
