[tool.poetry]
name = "plaid2text"
version = "0.1.0"
description = "Import financial data using plaid into plaintext."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.4.0"
beautifulsoup4 = "^4.10.0"
bottle = "^0.12.19"
cachetools = "^5.0.0"
certifi = "^2021.10.8"
chardet = "^4.0.0"
google-api-core = "^2.5.0"
google-api-python-client = "^2.36.0"
google-auth = "^2.6.0"
google-auth-httplib2 = "^0.1.0"
googleapis-common-protos = "^1.54.0"
httplib2 = "^0.20.4"
idna = "^3.3"
importlib-metadata = "^4.10.1"
lxml = "^4.7.1"
more-itertools = "^8.12.0"
packaging = "^21.3"
plaid-python = "^8.10.0"
pluggy = "^1.0.0"
ply = "^3.11"
prompt-toolkit = "^3.0.26"
protobuf = "^3.19.4"
py = "^1.11.0"
pyasn1 = "^0.4.8"
pyasn1-modules = "^0.2.8"
pymongo = "^4.0.1"
pyparsing = "^3.0.7"
pytest = "^7.0.0"
python-dateutil = "^2.8.2"
python-magic = "^0.4.25"
pytz = "^2021.3"
requests = "^2.27.1"
rsa = "^4.8"
six = "^1.16.0"
soupsieve = "^2.3.1"
uritemplate = "^4.1.1"
urllib3 = "^1.26.8"
wcwidth = "^0.2.5"
zipp = "^3.7.0"
beancount = "2.2.1"

[tool.poetry.dev-dependencies]
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
